task3/deployment_service_ingress.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: webapp
  labels:
    app: webapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: webapp

  template:
    metadata:
      labels:
        app: webapp

    spec:
      containers:
        - name: webapp
          image: aattard_web
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000

---
apiVersion: v1
kind: Service

metadata:
  name: webapp

spec:
  selector:
    app: webapp

  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
  labels:
    app: api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: aattard_api
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 5000

---
apiVersion: v1
kind: Service

metadata:
  name: api

spec:
  selector:
    app: api

  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
    - host: chal.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 3000
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
